monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4007/A4007a.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4007;

grammar A4007a extends de.monticore.grammar.cocos.invalid.A4007.A4007 {

  interface ReturnType;

}
